@@ -5,7 +5,7 @@ DIST jsonpipe-0.0.8.tar.gz 9522 RMD160 1f1f85353872b661598d150687ecff8cde2cbece 
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk9CtQ0ACgkQzJrj3cAXR0kt3gCdH1khTwphrXxZA8imgezDfJQO
-F8YAoLr+cxvv4Er+KulzssJoy4wUuz0V
-=BnCx
+iEYEAREKAAYFAk9SPA0ACgkQzJrj3cAXR0kOrQCdH6XRlILLebhO6dxH2OXgeZ2O
+qZMAnioEEnDvnxCGIa3GIN9H6qXBRFlR
+=jIdP
 -----END PGP SIGNATURE-----
