@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile install postinst postrm prepare
-DEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+DEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
 DESCRIPTION=Convert JSON to a UNIX-friendly line-based format
 EAPI=3
 HOMEPAGE=http://pypi.python.org/pypi/jsonpipe/
 KEYWORDS=amd64 x86
 LICENSE=public-domain
-RDEPEND=dev-python/setuptools || ( >=dev-lang/python-2.6 dev-python/simplejson ) || ( dev-python/argparse >=dev-lang/python-2.7 ) dev-python/calabash >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+RDEPEND=dev-python/setuptools || ( >=dev-lang/python-2.6 dev-python/simplejson ) || ( dev-python/argparse >=dev-lang/python-2.7 ) dev-python/calabash >=app-admin/eselect-python-20091230 =dev-lang/python-2*
 SLOT=0
 SRC_URI=mirror://pypi/j/jsonpipe/jsonpipe-0.0.8.tar.gz
 _eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	eutils	ba24d79270ea0022703f16b5de80051c	jnrowe-pypi	ec904774b8c8477cdb89043eb65c764c	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	06dff99bcab2fd584bd6d2aa6019ee19	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=65e546422d19c9266d0beb7b666b256f
+_md5_=688ed327e41ef824240f2b503f8b02c9
