@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Mar 2012; James Rowe <jnrowe@gmail.com> jsonpipe-0.0.8.ebuild,
+  jsonpipe-0.0.8-r1.ebuild:
+  Removed Python 2.4 support.
+
 *jsonpipe-0.0.8-r1 (20 Feb 2012)
 
   20 Feb 2012; James Rowe <jnrowe@gmail.com> +jsonpipe-0.0.8-r1.ebuild,
